--- a/Ahmed/kafka_producer/pom.xml
+++ b/Ahmed/kafka_producer/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>0.8.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20201115</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -42,7 +47,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>tn.kafka.TestAPI</mainClass>
+                            <mainClass>tn.kafka.Test_producer_API</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
